trunk/Archive2/fc/d768b36774841e/output
main.cpp: In function 'int main()':
main.cpp:7:2: error: 'cout' was not declared in this scope
  cout<<"Enter a string";
  ^
main.cpp:7:2: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/include/c++/4.8/iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
main.cpp:8:2: error: 'cin' was not declared in this scope
  cin.getline(str1,10);
  ^
main.cpp:8:2: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/include/c++/4.8/iostream:60:18: note:   'std::cin'
   extern istream cin;  /// Linked to standard input
                  ^
main.cpp:11:20: error: 'strlen' was not declared in this scope
  int x1=strlen(str1);
                    ^
